# cpp_course

./: README.md
exercise_01/student_template_1.1/: CMakeLists.txt  main.cpp
exercise_01/student_template_1.1/submission/: estimate_function_root.cpp  estimate_function_root.h
exercise_02/student_template_2.1/: CMakeLists.txt  main.cpp
exercise_02/student_template_2.1/submission/: selection_sort.cpp  selection_sort.h
exercise_02/student_template_2.2/: CMakeLists.txt  main.cpp
exercise_02/student_template_2.2/submission/: insertion_sort.cpp  insertion_sort.h
exercise_03/: .editorconfig
exercise_03/student_template_3.1/: CMakeLists.txt  main.cpp
exercise_03/student_template_3.1/submission/: KNNStruct.h
exercise_04/student_template_4.1/: CMakeLists.txt  main.cpp
exercise_04/student_template_4.1/cmake/: project_settings.cmake
exercise_04/student_template_4.1/submission/: Amoeba.cpp  Amoeba.h  Bacterium.cpp  Bacterium.h  DeadCell.cpp  DeadCell.h  Food.cpp  Food.h  Virus.cpp  Virus.h  engine.h
exercise_05/student_template_5.1/: CMakeLists.txt  FundamentalsOfBuisnesLaw.txt  IntroductionToContracts.txt  PythonForEveryone.txt  ThinkC++.txt  main.cpp
exercise_05/student_template_5.1/submission/: histogram.cpp  histogram.h  load_books.cpp  load_books.h
exercise_06/: .clangd
exercise_06/student_template_6/: CMakeLists.txt  main.cpp
exercise_06/student_template_6/include/: point3d.h
exercise_06/student_template_6/submission/: operations.cpp  operations.h  shapes.cpp  shapes.h  transformations.cpp  transformations.h  voxel_grid.cpp  voxel_grid.h  your_shape.cpp
exercise_07/student_template_7.1/: CMakeLists.txt  main.cpp
exercise_07/student_template_7.1/submission/: exercise_07.h
exercise_07/student_template_7.2/: CMakeLists.txt  main.cpp
exercise_07/student_template_7.2/submission/: complex_number.h
exercise_08/: .clangd
exercise_08/student_template_8.1/: CMakeLists.txt  main.cpp
exercise_08/student_template_8.1/submission/: exercise_81.cpp  exercise_81.h
exercise_08/student_template_8.2/: CMakeLists.txt  main.cpp
exercise_08/student_template_8.2/submission/: exercise_82.cpp  exercise_82.h  point.h
exercise_09/: .clangd
exercise_09/student_template_9.1/: CMakeLists.txt  main.cpp
exercise_09/student_template_9.1/submission/: exercise_09_1.cpp  exercise_09_1.h
exercise_09/student_template_9.2/: CMakeLists.txt  main.cpp
exercise_09/student_template_9.2/submission/: exercise_09_2.cpp  exercise_09_2.h
exercise_09/student_template_9.3/: CMakeLists.txt  main.cpp
exercise_09/student_template_9.3/submission/: exercise_09_3.cpp  exercise_09_3.h
exercise_09/student_template_9.4/: CMakeLists.txt  main.cpp
exercise_09/student_template_9.4/submission/: exercise_09_4.cpp  exercise_09_4.h
exercise_10/: .editorconfig
exercise_10/student_template_10/: CMakeLists.txt  main.cpp
exercise_10/student_template_10/submission/: adjacency_list_graph.cpp  adjacency_list_graph.h  random_walk_graph.cpp  random_walk_graph.h
exercise_11/student_template_11.1/: CMakeLists.txt  main.cpp
exercise_11/student_template_11.1/submission/: shortest_paths.cpp
